# atuin

./: Cargo.toml
crates/atuin/: Cargo.toml
crates/atuin-ai/src/commands/: inline.rs
crates/atuin-client/: config.toml
crates/atuin-client/src/: settings.rs
crates/atuin-client/src/settings/: clipboard.rs
crates/atuin-clipboard/: Cargo.toml
crates/atuin-clipboard/migrations/: 20260719000000_create_clipboard.down.sql  20260719000000_create_clipboard.up.sql  20260719000100_create_clipboard_tombstones.down.sql  20260719000100_create_clipboard_tombstones.up.sql
crates/atuin-clipboard/src/: database.rs  entry.rs  lib.rs  store.rs  watcher.rs
crates/atuin-clipboard/src/backend/: arboard.rs  mod.rs
crates/atuin-daemon/: Cargo.toml
crates/atuin-daemon/src/: client.rs  daemon.rs  events.rs  lib.rs
crates/atuin-daemon/src/components/: clipboard.rs  mod.rs  search.rs  sync.rs
crates/atuin-daemon/tests/: lifecycle.rs
crates/atuin/src/command/: client.rs
crates/atuin/src/command/client/: clipboard.rs  search.rs
crates/atuin/src/command/client/search/: clipboard_search.rs  history_list.rs  inspector.rs  interactive.rs  item.rs
crates/atuin/src/command/client/search/keybindings/: actions.rs  defaults.rs
docs/: clipboard-history.md  clipboard-implementation.md
